the second commit function: test bootstrap ui

--- a/bootstrap/src/main/resources/application.properties
+++ b/bootstrap/src/main/resources/application.properties
@@ -11,6 +11,7 @@ spring.datasource.initial-size=10
 #server config
 server.port=8080
 server.servlet.context-path=/
+server.servlet.jsp.init-parameters.development=true
 
 #thrmeleaf config
 spring.thymeleaf.prefix=classpath:/templates/
