--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,11 @@ subprojects {
     apply plugin: 'idea'
 
 
+    task createJavaProject << {
+        sourceSets*.java.srcDirs*.each { it.mkdirs() }
+        sourceSets*.resources.srcDirs*.each { it.mkdirs() }
+    }
+
     dependencies {
         testCompile group: 'junit', name: 'junit', version: '4.12'
     }
